# ChangeLog for dev-perl/DBI
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBI/ChangeLog,v 1.115 2009/05/06 08:54:42 tove Exp $

*DBI-1.608 (06 May 2009)

  06 May 2009; Torsten Veller <tove@gentoo.org> +DBI-1.608.ebuild:
  Version bump

  13 Feb 2009; Raúl Porcel <armin76@gentoo.org> DBI-1.607.ebuild:
  Re-add ~arm/~s390/~sh

*DBI-1.607 (26 Nov 2008)

  26 Nov 2008; Torsten Veller <tove@gentoo.org> +DBI-1.607.ebuild:
  Version bump (#248767)

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -DBI-1.51-r1.ebuild,
  -DBI-1.52.ebuild, -DBI-1.53.ebuild, -DBI-1.55.ebuild, -DBI-1.56.ebuild,
  -DBI-1.57.ebuild, -DBI-1.58.ebuild, -DBI-1.59.ebuild:
  Cleanup

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBI-1.601.ebuild:
  keyword ~x86-fbsd

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> DBI-1.601.ebuild:
  Stable for HPPA too.

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> DBI-1.601.ebuild:
  Stable on ppc64

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> DBI-1.601.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> DBI-1.601.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> DBI-1.58.ebuild:
  amd64 stable

*DBI-1.601 (26 Oct 2007)

  26 Oct 2007; Christian Hartmann <ian@gentoo.org> +DBI-1.601.ebuild:
  Version bump

*DBI-1.59 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +DBI-1.59.ebuild:
  Version bump

  06 Oct 2007; Tom Gall <tgall@gentoo.org> DBI-1.58.ebuild:
  stable on ppc64

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> DBI-1.58.ebuild:
  Stable on sparc

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> DBI-1.58.ebuild:
  Stable on mips.

  28 Jul 2007; Raúl Porcel <armin76@gentoo.org> DBI-1.58.ebuild:
  alpha/ia64/x86 stable

  06 Jul 2007; Tom Gall <tgall@gentoo.org> DBI-1.56.ebuild:
  stable on ppc64

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org> DBI-1.56.ebuild:
  alpha/ia64/x86 stable
