@@ -1,8 +1,10 @@
 DIST DBI-1.601.tar.gz 495124 RMD160 ffdc426abe7e62c828c8ad05c96a17cd9e03b72b SHA1 0d1d28df90927f142d51555fa27bf1b2689141c3 SHA256 a3c381c822f899e84a69f5aa8aad184cfac766cf0fddf42d04d4dab9f3ba6a82
 DIST DBI-1.607.tar.gz 504385 RMD160 e1dd06cd5b4f3fcd5e2850e9b36fdfe7eae44c4b SHA1 5883b7c8129f33d234fdbb7903b60c60abf7dadb SHA256 7090a1e6a0d13be2f7e27a724351c61e44ffa5d165a7720bfe505aa2c4d47e14
 DIST DBI-1.608.tar.gz 508058 RMD160 646a6d3ff7ca796ae0ca17bb54c14e45992080b2 SHA1 6ce03c2d385ba6a12a45a0cf4900001bbcf4176b SHA256 531c688073c1d2755d0c536100903deda05511771416f11abb9d4168f228ab23
+DIST DBI-1.609.tar.gz 510309 RMD160 1f1e8ffb795168c65add2ac13d3549ab9958b934 SHA1 abb8071a3451c36099846f73838cb7a6533e3bd8 SHA256 9b9b688fe65e674a0c17d93f504f54d52bded6497d9b2d8a0aa09b64226ad641
 EBUILD DBI-1.601.ebuild 607 RMD160 9fab8844a5c10d8522d24236c15e6289609cc1b7 SHA1 31e00e1350f021e973a4b1ff35305a585d60e8c9 SHA256 82279b27e7bd2b85f4180d42df39e04b2d397485f6a9322b58f5952343d24c3d
 EBUILD DBI-1.607.ebuild 533 RMD160 ace1a55e12f93a1602382990e8376f1788ee2972 SHA1 b91ef8010d0b90686715f6a2b73191497a752767 SHA256 4cd7d72ff5c984931e20b8955bfd378972e83c464e359042193103341301b32e
 EBUILD DBI-1.608.ebuild 546 RMD160 8965537bcab30d8332f5b9ca503d8acf45e4a785 SHA1 21cdc6c98c5261c4dfc4c7741cd4f19cd2a9de70 SHA256 93460daf33e19a47c214a50fc1ca4bdbbd4d945a81ccf26b905c088e10a786be
-MISC ChangeLog 12831 RMD160 ff308af4e6637b73985eba19a05d89481a6fa076 SHA1 bef0e9e341eff0630afcad1b5aadc961a3f804a3 SHA256 ab8967549d7fda5d4d0887991bc1ffcb2f15ba82f1e8731a4f2f05e314166514
+EBUILD DBI-1.609.ebuild 573 RMD160 204b0d484c7d595c0aa3dc46dd4e3ae86bdd8fb4 SHA1 55f1ccc2e7f36750cccace8f8b20d5ac8f40b67f SHA256 006ea3a593bc65b94bf9a3979f397f0b52863e54f42d54ce2a9e4bd6cc88d304
+MISC ChangeLog 12940 RMD160 733392843e40993bdb1bb665e6322dfac8b65603 SHA1 1100f31aad8a0f41a3862ca1248489c6683153b7 SHA256 8f087ca3cf5d66a8a837d5b314902a4538ae63aafe89ca689df964e3bd17cd4b
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
